ready to since main ipynb

--- a/project/code/example.ipynb
+++ b/project/code/example.ipynb
@@ -721,6 +721,56 @@
     "    print()\n",
     "    print()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "316fa697",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['duration', 'srate', 'psh_flag_number', 'ack_flag_number', 'ack_count', 'syn_count', 'rst_count', 'header_length', 'https', 'flow_duration', 'avg', 'max', 'tot_sum', 'min', 'iat', 'magnitude', 'radius', 'variance']\n",
+      "Elements in array1 but not in array2: ['drate' 'ssh' 'syn_flag_number']\n",
+      "Elements in array2 but not in array1: []\n"
+     ]
+    }
+   ],
+   "source": [
+    "# fitler cols\n",
+    "filter_vars = [\"duration\", \"srate\", \"drate\", \"syn_flag_number\", \"psh_flag_number\", \"ack_flag_number\", \"ack_count\", \n",
+    "               \"syn_count\", \"rst_count\", \"header_length\", \"https\", \"ssh\", \"flow_duration\", \"avg\", \"max\", \"tot_sum\", \n",
+    "               \"min\", \"iat\", \"magnitude\", \"radius\", \"variance\"]\n",
+    "# Drop unbalanced features and unclear features\n",
+    "unbalanced_feat = [\"drate\", \"smtp\", \"irc\", \"telnet\", \"ssh\", \"dhcp\", \"arp\", \"ipv\", \"llc\", \"dns\", \"cwr_flag_number\", \n",
+    "                   \"ece_flag_number\", \"rst_flag_number\", \"syn_flag_number\"]\n",
+    "unclear_feat = [\"protocol_type\", \"tot_size\"]\n",
+    "feat2drop = unbalanced_feat + unclear_feat\n",
+    "\n",
+    "# compare cols\n",
+    "# filter2_col = tr_cols.remove(feat2drop)\n",
+    "# Create a new list excluding elements from the remove_array\n",
+    "filtered_list = [item for item in filter_vars if item not in feat2drop]\n",
+    "print(filtered_list)\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "# Define two arrays of strings\n",
+    "array1 = np.array(filter_vars)\n",
+    "array2 = np.array(filtered_list)\n",
+    "\n",
+    "# Find elements in array1 but not in array2\n",
+    "only_in_array1 = np.setdiff1d(array1, array2)\n",
+    "\n",
+    "# Find elements in array2 but not in array1\n",
+    "only_in_array2 = np.setdiff1d(array2, array1)\n",
+    "\n",
+    "# Display results\n",
+    "print(\"Elements in array1 but not in array2:\", only_in_array1)\n",
+    "print(\"Elements in array2 but not in array1:\", only_in_array2)"
+   ]
   }
  ],
  "metadata": {
